added changes for html report