@@ -4,25 +4,82 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <!--Parent for all require dependencies-->
-    <parent>
+    <!--<parent>
         <groupId>au.com.foxsports</groupId>
         <artifactId>fs-test-automation-pom</artifactId>
         <version>1.3.0-SNAPSHOT</version>
     </parent>
-
-    <groupId>Test</groupId>
+    --><groupId>Test</groupId>
     <artifactId>FoxSports</artifactId>
     <version>1.0-SNAPSHOT</version>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <profiles>
+        <profile>
+            <id>local</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <profile.path>/profiles/local/config.properties</profile.path>
+                <testToRun>**/*IT.class</testToRun>
+            </properties>
+        </profile>
+        <profile>
+            <id>grid</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <profile.path>/profiles/grid/config.properties</profile.path>
+                <testToRun>**/*IT.class</testToRun>
+            </properties>
+        </profile>
+    </profiles>
+
+    <!--<properties>
+        <cucumber.version>1.2.4</cucumber.version>
+        <selenium.version>3.4.0</selenium.version>
+        <slf4jVersion>1.7.7</slf4jVersion>
+        <cucumber-jvm-deps>1.0.5</cucumber-jvm-deps>
+        <assertj-assert>3.2.0</assertj-assert>
+        <appium-java-client>3.1.0</appium-java-client>
+        <maven-surefire-plugin>2.20</maven-surefire-plugin>
+        <mojo-exec-maven-plugin>1.2.1</mojo-exec-maven-plugin>
+        <maven-resource-plugin>2.7</maven-resource-plugin>
+        <maven-compiler-plugin>2.5.1</maven-compiler-plugin>
+        <maven-cucumber-reporting>0.0.8</maven-cucumber-reporting>
+        <cucumber.jvm.parallel.version>4.1.0</cucumber.jvm.parallel.version>
+        <utf-8>UTF-8</utf-8>
+        <java-version>1.8</java-version>
+
+    </properties>
+-->
 
     <dependencies>
+        <!--Logger -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.7</version>
+        </dependency>
+
         <!--For cucumber -->
-        <!--<dependency>
+        <dependency>
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-java</artifactId>
+            <version>1.2.4</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>info.cukes</groupId>
+            <artifactId>cucumber-junit</artifactId>
             <version>1.2.4</version>
             <scope>test</scope>
         </dependency>
@@ -47,21 +104,14 @@
         </dependency>
 
 
-        &lt;!&ndash;For Junit &ndash;&gt;
+        <!--For Junit -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
-        </dependency>-->
-        <dependency>
-            <groupId>info.cukes</groupId>
-            <artifactId>cucumber-junit</artifactId>
-            <version>1.2.4</version>
-            <scope>test</scope>
         </dependency>
-
-        <!--For Selenium-->
+        <!-- For Selenium -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
@@ -78,144 +128,186 @@
             <groupId>io.appium</groupId>
             <artifactId>java-client</artifactId>
             <version>4.1.2</version>
+
         </dependency>
-        <!--Add dependency of test automation framework-->
+        <dependency>
+            <groupId>com.assertthat</groupId>
+            <artifactId>selenium-shutterbug</artifactId>
+            <version>0.6</version>
+        </dependency>
+        <dependency>
+            <groupId>info.cukes</groupId>
+            <artifactId>cucumber-core</artifactId>
+            <version>1.2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>ru.yandex.qatools.ashot</groupId>
+            <artifactId>ashot</artifactId>
+            <version>1.5.2</version>
+        </dependency>
+
         <dependency>
             <groupId>au.com.foxsports</groupId>
             <artifactId>fs-test-automation-framework</artifactId>
             <version>1.3.0-SNAPSHOT</version>
         </dependency>
+
     </dependencies>
-
     <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.2</version>
-            </plugin>
-            </plugins>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>exec-maven-plugin</artifactId>
-                    <version>${exec-maven-plugin.version}</version>
-                    <configuration>
-                        <classpathScope>test</classpathScope>
-                        <mainClass>cucumber.cli.Main</mainClass>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>${maven-surefire-plugin.version}</version>
-                    <configuration>
-                        <testFailureIgnore>false</testFailureIgnore>
-                        <properties>
-                            <property>
-                                <name>junit</name>
-                                <value>true</value>
-                            </property>
-                            <!--<property>
-                                <name>listener</name>
-                                <value>com.fs.app.automation.BaseTest</value>
-                            </property>
-                            --><property>
-                                <name>isBamboo</name>
-                                <value>${isBamboo}</value>
-                            </property>
-                            <property>
-                                <name>isSeleniumGrid</name>
-                                <value>${isSeleniumGrid}</value>
-                            </property>
-                            <property>
-                                <name>seleniumGridUrl</name>
-                                <value>${seleniumGridUrl}</value>
-                            </property>
-                            <property>
-                                <name>browser</name>
-                                <value>${browser}</value>
-                            </property>
-                            <property>
-                                <name>isZephyrStatusUpdate</name>
-                                <value>${isZephyrStatusUpdate}</value>
-                            </property>
-                            <property>
-                                <name>stopExecutionOnFail</name>
-                                <value>${stopExecutionOnFail}</value>
-                            </property>
-                            <property>
-                                <name>jiraProjectKeys</name>
-                                <value>${jiraProjectKeys}</value>
-                            </property>
-                            <property>
-                                <name>jiraVersionName</name>
-                                <value>${jiraVersionName}</value>
-                            </property>
-                            <property>
-                                <name>testCycleName</name>
-                                <value>${testCycleName}</value>
-                            </property>
-                            <property>
-                                <name>testCycleDescription</name>
-                                <value>${testCycleDescription}</value>
-                            </property>
-                            <property>
-                                <name>testCycleBuild</name>
-                                <value>${testCycleBuild}</value>
-                            </property>
-                            <property>
-                                <name>testCycleEnvironment</name>
-                                <value>${testCycleEnvironment}</value>
-                            </property>
-                        </properties>
-                        <includes>
-                            <include>**/*Test*.*</include>
-                        </includes>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>${maven-compiler-plugin.version}</version>
-                    <configuration>
-                        <source>${maven.compiler.source}</source>
-                        <target>${maven.compiler.target}</target>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-checkstyle-plugin</artifactId>
-                    <version>${maven-checkstyle-plugin.version}</version>
-                    <dependencies>
-                        <dependency>
-                            <groupId>com.puppycrawl.tools</groupId>
-                            <artifactId>checkstyle</artifactId>
-                            <version>${puppycrawl-checkstyle.version}</version>
-                        </dependency>
-                    </dependencies>
-                    <configuration>
-                        <configLocation>${checkstyle.config.location}</configLocation>
-                        <consoleOutput>true</consoleOutput>
-                        <failsOnError>true</failsOnError>
-                        <failOnViolation>true</failOnViolation>
-                        <suppressionsLocation>${checkstyle.suppressions.location}</suppressionsLocation>
-                        <sourceDirectory>${checkstyle.sourceDirectory.location}</sourceDirectory>
-                        <includeTestSourceDirectory>true</includeTestSourceDirectory>
-                        <testSourceDirectory>${checkstyle.testSourceDirectory.location}</testSourceDirectory>
-                        <includeResources>false</includeResources>
-                        <includeTestResources>false</includeTestResources>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>check</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
-            </plugins>
-        </pluginManagement>
+    <plugins>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.5.1</version>
+        <configuration>
+            <encoding>utf-8</encoding>
+            <source>1.8</source>
+            <target>1.8</target>
+        </configuration>
+    </plugin>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.8.2-SNAPSHOT</version>
+        <!--change start -->
+        <configuration>
+            <testFailureIgnore>false</testFailureIgnore>
+            <properties>
+                <property>
+                    <name>junit</name>
+                    <value>true</value>
+                </property>
+                <property>
+                    <name>listener</name>
+                    <value>com.fs.app.automation.BaseTest</value>
+                </property>
+                <property>
+                    <name>isBamboo</name>
+                    <value>${isBamboo}</value>
+                </property>
+                <property>
+                    <name>serviceHost</name>
+                    <value>${serviceHost}</value>
+                </property>
+                <property>
+                    <name>isSeleniumGrid</name>
+                    <value>${isSeleniumGrid}</value>
+                </property>
+                <property>
+                    <name>seleniumGridUrl</name>
+                    <value>${seleniumGridUrl}</value>
+                </property>
+                <property>
+                    <name>browser</name>
+                    <value>${browser}</value>
+                </property>
+                <property>
+                    <name>isZephyrStatusUpdate</name>
+                    <value>${isZephyrStatusUpdate}</value>
+                </property>
+                <property>
+                    <name>stopExecutionOnFail</name>
+                    <value>${stopExecutionOnFail}</value>
+                </property>
+                <property>
+                    <name>jiraProjectKeys</name>
+                    <value>${jiraProjectKeys}</value>
+                </property>
+                <property>
+                    <name>jiraVersionName</name>
+                    <value>${jiraVersionName}</value>
+                </property>
+                <property>
+                    <name>testCycleName</name>
+                    <value>${testCycleName}</value>
+                </property>
+                <property>
+                    <name>testCycleDescription</name>
+                    <value>${testCycleDescription}</value>
+                </property>
+                <property>
+                    <name>testCycleBuild</name>
+                    <value>${testCycleBuild}</value>
+                </property>
+                <property>
+                    <name>testCycleEnvironment</name>
+                    <value>${testCycleEnvironment}</value>
+                </property>
+            </properties>
+            <includes>
+                <include>**/*Test*.*</include>
+            </includes>
+        </configuration>
+        <!--change end -->
+        <executions>
+            <execution>
+                <id>test</id>
+                <phase>test</phase>
+                <goals>
+                    <goal>test</goal>
+                </goals>
+                <configuration>
+                    <threadCount>1</threadCount>
+                    <perCoreThreadCount>true</perCoreThreadCount>
+                    <!--<forkCount>2</forkCount>
+                    <reuseForks>true</reuseForks>
+                    --><argLine>-Duser.language=en</argLine>
+                    <argLine>-Xmx1024m</argLine>
+                    <argLine>-XX:MaxPermSize=256m</argLine>
+                    <argLine>-Dfile.encoding=UTF-8</argLine>
+                    <useFile>false</useFile>
+                    <includes>
+                        <include>${testToRun}</include>
+                    </includes>
+                    <testFailureIgnore>false</testFailureIgnore>
+                </configuration>
+            </execution>
+        </executions>
+    </plugin>
+    <plugin>
+        <groupId>com.github.temyers</groupId>
+        <artifactId>cucumber-jvm-parallel-plugin</artifactId>
+        <version>4.1.0</version>
+        <executions>
+            <execution>
+                <id>generateRunners</id>
+                <phase>validate</phase>
+                <goals>
+                    <goal>generateRunners</goal>
+                </goals>
+                <configuration>
+                    <glue>
+                        <package>com.fs.app.automation.step.definition</package>
+                    </glue>
+                    <outputDirectory>${project.build.directory}/generated-test-sources/cucumber</outputDirectory>
+                    <featuresDirectory>src/main/resources</featuresDirectory>
+                    <cucumberOutputDir>${project.build.directory}/cucumber-parallel</cucumberOutputDir>
+                    <plugins>
+                        <plugin>
+                            <!--The available options are junit, testng, html, pretty, json, usage and rerun -->
+                            <name>json</name>
+                            <!--Optional file extension. For build in cucumber plugins a sensible default is provided. -->
+                            <extension>json</extension>
+                            <!--Optional output directory. Overrides cucumberOutputDirectory. Usefull when different
+                                plugins create files with the same extension-->
+                            <outputDirectory>${project.build.directory}/cucumber-parallel/json</outputDirectory>
+                        </plugin>
+                    </plugins>
+                    <strict>true</strict>
+                    <monochrome>true</monochrome>
+                    <tags>
+                        <tag>${tags}</tag>
+                    </tags>
+                    <useTestNG>false</useTestNG>
+                    <namingScheme>simple</namingScheme>
+                    <!-- The class naming pattern to use.  Only required/used if naming scheme is 'pattern'.-->
+                    <namingPattern>Parallel{c}IT</namingPattern>
+                    <!-- One of [SCENARIO, FEATURE]. SCENARIO generates one runner per scenario.  FEATURE generates a runner per feature. -->
+                    <parallelScheme>FEATURE</parallelScheme>
+                </configuration>
+            </execution>
+        </executions>
+    </plugin>
+    </plugins>
     </build>
-
-
 </project>
